--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BOT_TOKEN = "6728600265:AAGRDl41KnL0Uuk8rMGSsq4G9SfBW2fZzvo" #MAIN
-#BOT_TOKEN = "7165650578:AAHQ7yaQMTeX7JFnnnxJADUde6y7ld5ZV3w" #TEST
+#BOT_TOKEN = "6728600265:AAGRDl41KnL0Uuk8rMGSsq4G9SfBW2fZzvo" #MAIN
+BOT_TOKEN = "7165650578:AAHQ7yaQMTeX7JFnnnxJADUde6y7ld5ZV3w" #TEST
 CONNECTION_STRING = "mongodb+srv://psihozik:Ei2-JHG-C8Y-Gmj@cluster0.brgfuua.mongodb.net/?retryWrites=true&w=majority"
 
 
